--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="index222.css">
+  <link rel="stylesheet" href="index.css">
   <title>My Website</title>
 </head>
 
@@ -183,7 +183,7 @@
     <div class="about container">
       <div class="col-left">
         <div class="about-img">
-          <img src="image\WhatsApp Image 2023-09-14 at 02.14.05.jpeg" alt="img">
+          <img src="WhatsApp Image 2023-09-14 at 02.14.05.jpeg" alt="img">
         </div>
       </div>
       <div class="col-right">
@@ -193,7 +193,7 @@
           my skills, knowledge and learning.Obtain a responsible career path
           that will allow me make the most of my education and experience
           while significantly contributing to the organisation growth.</h2>
-        <a href="image\ambrish resume abesit (1).pdf" class="cta">Download Resume</a>
+        <a href="ambrish resume abesit (1).pdf" class="cta">Download Resume</a>
       </div>
     </div>
   </section>
@@ -208,7 +208,7 @@
       
       <div class="contact-items">
         <div class="contact-item">
-          <div class="icon"><img src="image\download (1).jpg" ></div>
+          <div class="icon"><img src="download (1).jpg" ></div>
           <div class="contact-info">
             <h1>Working with</h1>
             <h1>Mystical production pvt.Ltd.</h1>
@@ -327,20 +327,20 @@
       <div class="social-icon">
        
         <div class="social-item">
-          <a href="#"><img src="image\replit.png" /></a>
+          <a href="#"><img src="replit.png" /></a>
         </div>
         <div class="social-item">
-          <a href="#"><img src="image\git.png" /></a>
+          <a href="#"><img src="git.png" /></a>
         </div>
         <div class="social-item">
-          <a href="https://www.linkedin.com/in/ambrish-s-a32093223/"><img src="image\linkedin.png" /></a>
+          <a href="https://www.linkedin.com/in/ambrish-s-a32093223/"><img src="linkedin.png" /></a>
         </div>
       </div>
       <p>Copyright © 2020 Ambrish. All rights reserved</p>
     </div>
   </section>
   <!-- End Footer -->
-  <script src="index22.js"></script>
+  <script src="index.js"></script>
 </body>
 
 </html>
