--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
           my skills, knowledge and learning.Obtain a responsible career path
           that will allow me make the most of my education and experience
           while significantly contributing to the organisation growth.</h2>
-        <a href="ambrish resume abesit (1).pdf" class="cta">Download Resume</a>
+        <a href="ambrish resume.pdf" class="cta">Download Resume</a>
       </div>
     </div>
   </section>
@@ -336,7 +336,7 @@
           <a href="https://www.linkedin.com/in/ambrish-s-a32093223/"><img src="linkedin.png" /></a>
         </div>
       </div>
-      <p>Copyright © 2020 Ambrish. All rights reserved</p>
+      <p>Copyright © 2023 Ambrish. All rights reserved</p>
     </div>
   </section>
   <!-- End Footer -->
