--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
       <div class="all-projects">
         <div class="project-item">
           <div class="project-info">
-            <h1>ORGANIC SHOP</h1>
+            <h1>PetCare website</h1>
            
             <p></p>
           </div>
@@ -140,12 +140,11 @@
 
         <div class="project-item">
           <div class="project-info">
-            <h1>EXAM SEATING ARRANGEMENT</h1>
-           
-            <p></p>
+            <h1>BookShop</h1>
+         <p></p>
           </div>
           <div class="project-img">
-            <img src="./img/img-1.png" alt="img">
+            <img src="Screenshot (17).png"" alt="img">
           </div>
         </div>
 
