--- a/index.html
+++ b/index.html
@@ -144,13 +144,13 @@
          <p></p>
           </div>
           <div class="project-img">
-            <img src="Screenshot (17).png"" alt="img">
+            <img src="Screenshot (17).png" alt="img">
           </div>
         </div>
 
         <div class="project-item">
           <div class="project-info">
-            <h1>WORD CONVERTER</h1>
+            <h1>Hospital management system</h1>
            
           </div>
           <div class="project-img">
@@ -160,11 +160,11 @@
 
         <div class="project-item">
           <div class="project-info">
-            <h1>Pet care website</h1>
+            <h1>Todo List</h1>
             
           </div>
           <div class="project-img">
-            <img src="./img/img-1.png" alt="img">
+            <img src="Screenshot (18).png" alt="img">
           </div>
         </div>
         </div>
