--- a/index.html
+++ b/index.html
@@ -129,18 +129,18 @@
       <div class="all-projects">
         <div class="project-item">
           <div class="project-info">
-            <h1>PetCare website</h1>
+            <h1>PetCare</h1>
            
             <p></p>
           </div>
           <div class="project-img">
-            <img src="./img/img-1.png" alt="img">
+            <img src="petcare.jpg" alt="img">
           </div>
         </div>
 
         <div class="project-item">
           <div class="project-info">
-            <h1>BookShop</h1>
+            <h1>Book Shop</h1>
          <p></p>
           </div>
           <div class="project-img">
@@ -150,7 +150,7 @@
 
         <div class="project-item">
           <div class="project-info">
-            <h1>Hospital management system</h1>
+            <h1>Save life</h1>
            
           </div>
           <div class="project-img">
