--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   <section id="services">
     <div class="services container">
       <div class="service-top">
-        <h1 class="section-title">Ser<span>vi</span>ces</h1>
+        <h1 class="section-title">Technical<span>Skills</span>ces</h1>
        
       </div>
       <div class="service-bottom">
