--- a/index.html
+++ b/index.html
@@ -114,6 +114,11 @@
           <h2>DBMS</h2>
           <p></p>
         </div>
+        <div class="service-item">
+          <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png" /></div>
+          <h2>MYsql</h2>
+          <p></p>
+        </div>
         
       </div>
     </div>
@@ -150,11 +155,11 @@
 
         <div class="project-item">
           <div class="project-info">
-            <h1>Save life</h1>
+            <h1>HeatkCare</h1>
            
           </div>
           <div class="project-img">
-            <img src="./img/img-1.png" alt="img">
+            <img src="healthcare.jpg" alt="img">
           </div>
         </div>
 
