--- a/index.html
+++ b/index.html
@@ -199,11 +199,11 @@
    <section id="contact">
     <div class="contact container">
       <div>
-        <h1 class="section-title">FULL<span>NSHIP</span></h1>
+        <h1 class="section-title">FULL<span>TIME</span></h1>
       </div>
        <div class="contact-items">
         <div class="contact-item">
-          <div class="icon"><img src="" ></div>
+          <div class="icon"><img src="APSIDATA.jpeg" ></div>
           <div class="contact-info">
             <h1>Working with</h1>
             <h2>Apsidata Solutions Pvt.Ltd</h2>
