--- a/index.html
+++ b/index.html
@@ -209,6 +209,7 @@
             <h3>DOTNET Developer</h3>
              <h4> From- 17-10-2024 - to ---</h4>
           </div>
+        </div>
         <div class="contact-item">
           <div class="icon"><img src="download (1).jpg" ></div>
           <div class="contact-info">
